# MsgPacketizer

./: .gitignore  LICENSE  MsgPacketizer.h  README.md  library.json  library.properties
MsgPacketizer/: Publisher.h  Subscriber.h
examples/: README.md
examples/apps/python/msgpacketizer-py/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/apps/python/msgpacketizer-py/src/: common.py  network.py  serialport.py
examples/apps/python/msgpacketizer-py/src/msgpacketizerpy/msgpacketizer/: __init__.py  common.py  decoder.py  encoder.py  subscriber.py
examples/apps/python/msgpacketizer-py/src/packetizerpy/packetizer/: common.py  decoder.py  encoder.py  subscriber.py
examples/apps/python/msgpacketizer-py/src/packetizerpy/packetizer/typing/: crc8.pyi
examples/apps/python/msgpacketizer-py/src/packetizerpy/packetizer/typing/cobs/: __init__.pyi
examples/apps/python/msgpacketizer-py/src/packetizerpy/packetizer/typing/cobs/cobsr/: __init__.pyi  _cobsr_ext.pyi
examples/apps/python/msgpacketizer-py/src/packetizerpy/typings/cobs/_version/: __init__.pyi
examples/apps/python/msgpacketizer-py/src/packetizerpy/typings/cobs/cobs/: _cobs_ext.pyi  _cobs_py.pyi
examples/apps/python/msgpacketizer-py/tests/: test_msgpacketizer.py  test_packetizer.py
examples/apps/python/msgpacketizer-py/typings/: crc8.pyi
examples/apps/python/msgpacketizer-py/typings/cobs/cobs/: __init__.pyi
examples/apps/python/msgpacketizer-py/typings/cobs/cobsr/: _cobsr_py.pyi
examples/apps/rust/msgpacketizer-rs/msgpacketizer-bevy/: Cargo.toml
examples/apps/rust/msgpacketizer-rs/msgpacketizer-bevy/src/: main.rs
examples/apps/rust/msgpacketizer-rs/msgpacketizer-serial/: Cargo.toml
examples/apps/rust/msgpacketizer-rs/msgpacketizer-serial/src/: serialport.rs
(+202 files in other folders)
