[package]
name = "msgpacketizer-serial"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.3"
msgpacketizer = { path = "../msgpacketizer" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.8"

[[bin]]
name = "serialport"
path = "src/serialport.rs"

[[bin]]
name = "network"
path = "src/network.rs"
